<resources>
    <string name="app_name">Laafi Express</string>
    <string name="new_consult">Nouvelle consultation</string>
    <string name="list_consult">Liste des consultations</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="specialites">Spécialités</string>
    <string name="centres_de_sante">Centres de santé</string>
    <string name="preferences">Préférences</string>
    <string name="homme">Homme</string>
    <string name="femme">Femme</string>
    <string name="other">other</string>
    <string name="suivant">Suivant</string>
    <string name="instruction_date">Quand au plus tard voulez vous prendre rendez-vous?</string>
    <string name="date_debut">Date de début</string>
    <string name="date_sample">dd/mm/yyyy</string>
    <string name="date_fin">Date de fin</string>
    <string name="confirmer">Confirmer</string>
    <string name="user_name">SANOU Elvis Romaric</string>
    <string name="one">1</string>
    <string name="consultations_done">Consultations effectuées :</string>
    <string name="two">2</string>
    <string name="list_consultation">Liste des consultations</string>
    <string name="consultations_wainting">Consultations prévues : </string>
    <string name="visite">Visite médicale pour:</string>
    <string name="doctor">docteur</string>
    <string name="hour1">12H 00</string>
    <string name="hour2">12H 00</string>
    <string name="bar">-</string>
    <string name="status">Status</string>
    <string name="event_overlap">Il y a déja une consulation à cette heure veuillez choisir une autre heure</string>

    <!--List of speciality-->

    <string-array name="speciality_list">
        <item>none</item>
        <item>Pédiatrie</item>
        <item>Medecine generale</item>
        <item>Psycologie</item>
        <item>Chirurgie</item>
        <item>ORL</item>
    </string-array>

    <string name="city">Ouagadougou</string>
    <string name="clinique1">Clinique du coeur</string>
    <string name="clinique2">Clinique Sainte Marie</string>
    <string name="clinique3">Clinique Féroé</string>
    <string name="clinique4">Clinique des vieux jours</string>
    <string name="clinique5">Clinique du guérisseur</string>
    <string name="clinique6">Clinique bleu</string>
    <string name="clinique7">Clinique du coeur</string>
    <string name="event_early">Désolé vous ne pouvez pas choisir une date antérieur à la date actuelle</string>


</resources>
