<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@color/primaryTextColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="3dp">

        <TextView
            android:id="@+id/consult_list_item_specialite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColorBlack"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/specialites" />

        <TextView
            android:id="@+id/consult_list_item_centre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            android:textColor="@color/colorPrimary"
            app:layout_constraintTop_toBottomOf="@id/consult_list_item_specialite"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/centres_de_sante" />

        <TextView
            android:id="@+id/consult_list_item_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColorBlack"
            app:layout_constraintTop_toTopOf="@id/consult_list_item_centre"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/date_sample" />

        <TextView
            android:id="@+id/consult_list_item_doctor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:layout_marginTop="3dp"
            app:layout_constraintTop_toBottomOf="@id/consult_list_item_centre"
            app:layout_constraintStart_toStartOf="parent"
            android:hint="@string/doctor" />

        <TextView
            android:id="@+id/consult_list_item_hour_start"
            android:layout_width="wrap_content"
            android:textColor="@color/primaryTextColorBlack"
            android:layout_height="wrap_content"
            android:foregroundGravity="right"
            app:layout_constraintTop_toTopOf="@id/consult_list_item_doctor"
            app:layout_constraintEnd_toStartOf="@id/consult_list_item_hour_end"
            android:hint="@string/hour1" />


        <TextView
            android:id="@+id/consult_list_item_hour_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primaryTextColorBlack"
            app:layout_constraintTop_toTopOf="@id/consult_list_item_doctor"
            app:layout_constraintEnd_toEndOf="parent"
            android:hint="@string/hour2" />

        <TextView
            android:id="@+id/consult_list_item_statut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/consult_list_item_doctor"
            android:hint="@string/status" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>