<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/consultListFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".View.Fragment.ConsultListFragment">

    <ImageView
        android:id="@+id/consult_list_frag_logo"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintDimensionRatio="16.9"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/logo" />

    <TextView
        android:id="@+id/consult_list_frag_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/user_name"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consult_list_frag_logo" />

    <TextView
        android:id="@+id/consult_list_frag_wainting_date_label"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/consult_list_frag_wainting_date"
        android:text="@string/consultations_wainting"
        app:layout_constraintBottom_toBottomOf="@id/consult_list_frag_wainting_date"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/consult_list_frag_wainting_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/one"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consult_list_frag_name" />

    <TextView
        android:id="@+id/consult_list_frag_done_date_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:labelFor="@id/consult_list_frag_done_date"
        android:text="@string/consultations_done"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/consult_list_frag_done_date" />

    <TextView
        android:id="@+id/consult_list_frag_done_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:labelFor="@id/consult_list_frag_wainting_date"
        android:text="@string/two"
        style="@style/TextAppearance.MaterialComponents.Headline5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consult_list_frag_wainting_date" />

    <TextView
        android:id="@+id/consult_list_frag_list_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:labelFor="@id/consult_list_frag_list"
        android:text="@string/list_consultation"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/consult_list_frag_done_date" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/consult_list_frag_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        app:layout_constraintTop_toBottomOf="@id/consult_list_frag_list_label"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>